--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode=development",
-    "build": "babel slider -d dist --copy-files"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
