--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-button-fjj",
+  "name": "react-slider-fjj",
   "version": "1.0.7",
   "description": "",
   "main": "./dist/index/index.js",
