--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-slider-fjj",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/index/index.js",
+  "main": "./dist/slider.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode=development",
