--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-slider-fjj",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "react-slider",
   "main": "./dist/slider.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
